<resources>
    <string name="app_name">HEPAQ</string>
    <string name="hint_dni">DNI</string>
    <string name="hint_fecha_nacimiento">fecha de nacimiento</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_resena">Reseña Historica</string>
    <string name="btn_objetivos">Objetivos</string>
    <string name="btn_participantes">Participantes</string>
    <string name="btn_disenos">Diseños</string>
    <string name="navigation_atenciones">Atenciones</string>
    <string name="navigation_vacuna">vacuna</string>
    <string name="navigation_resultados">Resultados</string>
    <string name="navigation_acerca_de">Acerca</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="string_perfil">Perfil</string>
    <string name="mensaje_atenciones">En este apartado se mostraran sus atenciones.</string>
    <string name="string_atencion">Atención</string>
    <string name="string_medico">Médico</string>
    <string name="string_fecha">Fecha</string>
    <string name="string_nombre">Nombre</string>
    <string name="string_edad">Edad</string>
    <string name="vacunas">Vacunas</string>
    <string name="string_confirmar_asistencia">Confirmar Asistencia</string>
    <string name="string_resultados">Resultados</string>
    <string name="string_instrumentos">Instrumentos PRV</string>
    <string name="string_imc">IMC</string>
    <string name="tipo">Tipo</string>
    <string name="situacion">Situación</string>
    <string name="test_estres">TEST ESTRES</string>
    <string name="test_fant">TEST FANTASTICO</string>
    <string name="string_kilogramos">Kilogramos</string>
    <string name="string_centimetros">Centimetros</string>
    <string name="pdf">PDF</string>
    <string name="string_talla">Talla</string>
    <string name="string_peso">Peso</string>
    <string name="message">¿Estás seguro que quieres abandonar la prueba?</string>
    <string name="title">HEPAQ</string>
    <string name="intro_title">Bienvenido al Test Fantástico</string>
    <string name="intro_text">Contesta este cuestionario, recordando cómo ha sido tu vida este último mes</string>
    <string name="intro_start">¡Empecemos!</string>
    <string name="survey_next_button_text">Siguiente</string>
    <string name="finish_question_title">¡Hecho!</string>
    <string name="finish_question_text">Gracias por realizar la prueba</string>
    <string name="finish_survey_text">Gracias por realizar la encuesta</string>
    <string name="finish_question_submit">Finalizar</string>
    <string name="familia_amigos_title">Familia, Amigos</string>
    <string name="familia_amigos_preg_1">¿Tengo con quién hablar de las cosas que son importantes para mí?</string>
    <string name="familia_amigos_preg_1_op0">Casi siempre</string>
    <string name="familia_amigos_preg_1_op1">A veces</string>
    <string name="familia_amigos_preg_1_op2">Casi nunca</string>
    <string name="familia_amigos_preg_2">Yo doy y recibo cariño</string>
    <string name="familia_amigos_preg_2_op2">Casi siempre</string>
    <string name="familia_amigos_preg_2_op1">A veces</string>
    <string name="familia_amigos_preg_2_op0">Casi nunca</string>
    <string name="familia_amigos_preg_3">¿Me cuesta decir, buenos días, perdón, gracias, lo siento?</string>
    <string name="familia_amigos_preg_3_op0">Casi siempre</string>
    <string name="familia_amigos_preg_3_op1">A veces</string>
    <string name="familia_amigos_preg_3_op2">Casi nunca</string>
    <string name="actividad_fisica_asociativa">Actividad Física Asociatividad</string>
    <string name="actividad_fisica_asociativa_preg_1">Soy integrante activo de grupos de apoyo a la salud o sociales. Yo participo:</string>
    <string name="actividad_fisica_asociativa_preg_1_op2">Casi siempre</string>
    <string name="actividad_fisica_asociativa_preg_1_op1">A veces</string>
    <string name="actividad_fisica_asociativa_preg_1_op0">Casi nunca</string>
    <string name="actividad_fisica_asociativa_preg_2">Yo realizo actividad física  por 30 minutos cada vez.</string>
    <string name="actividad_fisica_asociativa_preg_2_op2">Tres o más veces por semana</string>
    <string name="actividad_fisica_asociativa_preg_2_op1">A veces</string>
    <string name="actividad_fisica_asociativa_preg_2_op0">Casi nunca</string>
    <string name="actividad_fisica_asociativa_preg_3">Yo camino, al menos 30 minutos diariamente.</string>
    <string name="actividad_fisica_asociativa_preg_3_op2">Casi siempre</string>
    <string name="actividad_fisica_asociativa_preg_3_op1">A veces</string>
    <string name="actividad_fisica_asociativa_preg_3_op0">Casi nunca</string>
    <string name="nutricion_alimentacion">Nutrición y Alimentación </string>
    <string name="nutricion_alimentacion_preg_1">Como 2 porciones de frutas y 3 de verduras:</string>
    <string name="nutricion_alimentacion_preg_1_op2">Todos los días</string>
    <string name="nutricion_alimentacion_preg_1_op1">A veces</string>
    <string name="nutricion_alimentacion_preg_1_op0">Casi nunca</string>
    <string name="nutricion_alimentacion_preg_2">A menudo consumo  mucha azúcar, sal , comida chatarra, o grasas</string>
    <string name="nutricion_alimentacion_preg_2_op2">Ninguna de éstas consumo</string>
    <string name="nutricion_alimentacion_preg_2_op1">Algunas de éstas</string>
    <string name="nutricion_alimentacion_preg_2_op0">Todas estas</string>
    <string name="nutricion_alimentacion_preg_3">Estoy pasado en mi peso ideal en:</string>
    <string name="nutricion_alimentacion_preg_3_op2">De 0 a 4 k más</string>
    <string name="nutricion_alimentacion_preg_3_op1">De 5 a 8 k más</string>
    <string name="nutricion_alimentacion_preg_3_op0">Más de 8 k</string>
    <string name="tabaco_dependencia">Tabaco, dependencia </string>
    <string name="tabaco_dependencia_preg_1">Yo fumo cigarrillos: </string>
    <string name="tabaco_dependencia_preg_1_op2">Ninguno los últimos 5 años</string>
    <string name="tabaco_dependencia_preg_1_op1">No el último año</string>
    <string name="tabaco_dependencia_preg_1_op0">Sí éste año</string>
    <string name="tabaco_dependencia_preg_2">Generalmente fumo ----- cigarrillos por día </string>
    <string name="tabaco_dependencia_preg_2_op2">Ninguno</string>
    <string name="tabaco_dependencia_preg_2_op1">De 0 a 10</string>
    <string name="tabaco_dependencia_preg_2_op0">Más de 10</string>
    <string name="tabaco_dependencia_preg_3">Usa excesivamente medicamentos sin prescripción médica o me automedico:</string>
    <string name="tabaco_dependencia_preg_3_op2">Nunca</string>
    <string name="tabaco_dependencia_preg_3_op1">Ocasional</string>
    <string name="tabaco_dependencia_preg_3_op0">A menudo</string>
    <string name="alcohol">Alcohol</string>
    <string name="alcohol_preg_1">Mi número promedio de tragos a la semana es: </string>
    <string name="alcohol_preg_1_op2">De 0 a 7</string>
    <string name="alcohol_preg_1_op1">De 8 a 12</string>
    <string name="alcohol_preg_1_op0">Más de 12</string>
    <string name="alcohol_preg_2">Bebo 8 vasos con agua cada día </string>
    <string name="alcohol_preg_2_op2">Casi Nunca</string>
    <string name="alcohol_preg_2_op1">A menudo</string>
    <string name="alcohol_preg_2_op0">Ocasional</string>
    <string name="alcohol_preg_3">Bebo té, café, cola, gaseosa </string>
    <string name="alcohol_preg_3_op2">Menos de 3/ día</string>
    <string name="alcohol_preg_3_op1">De 3 a 6/día</string>
    <string name="alcohol_preg_3_op0">Más de 6/día</string>
    <string name="sueno_estres">Sueño, Estrés</string>
    <string name="sueno_estres_preg_1">Duermo bien y me siento descansado: </string>
    <string name="sueno_estres_preg_1_op2">Casi siempre</string>
    <string name="sueno_estres_preg_1_op1">A veces</string>
    <string name="sueno_estres_preg_1_op0">Casi nunca</string>
    <string name="sueno_estres_preg_2">Yo me siento capaz de manejar el estrés o la tensión de mi vida: </string>
    <string name="sueno_estres_preg_2_op2">Casi siempre</string>
    <string name="sueno_estres_preg_2_op1">A veces</string>
    <string name="sueno_estres_preg_2_op0">Casi nunca</string>
    <string name="sueno_estres_preg_3">Yo me relajo y disfruto mi tiempo libre </string>
    <string name="sueno_estres_preg_3_op2">Casi siempre</string>
    <string name="sueno_estres_preg_3_op1">A veces</string>
    <string name="sueno_estres_preg_3_op0">Casi nunca</string>
    <string name="trabajo_personalidad">Trabajo y personalidad</string>
    <string name="trabajo_personalidad_preg_1">Parece que ando acelerado/a</string>
    <string name="trabajo_personalidad_preg_1_op2">Casi siempre</string>
    <string name="trabajo_personalidad_preg_1_op1">A veces</string>
    <string name="trabajo_personalidad_preg_1_op0">Casi nunca</string>
    <string name="trabajo_personalidad_preg_2">Me siento enojado o agresivo</string>
    <string name="trabajo_personalidad_preg_2_op2">Casi siempre</string>
    <string name="trabajo_personalidad_preg_2_op1">A veces</string>
    <string name="trabajo_personalidad_preg_2_op0">Casi nunca</string>
    <string name="trabajo_personalidad_preg_3">Yo me siento contento con mi trabajo y actividades</string>
    <string name="trabajo_personalidad_preg_3_op2">Casi siempre</string>
    <string name="trabajo_personalidad_preg_3_op1">A veces</string>
    <string name="trabajo_personalidad_preg_3_op0">Casi nunca</string>
    <string name="introspeccion">Introspección</string>
    <string name="introspeccion_preg_1">Yo soy un pensador positivo</string>
    <string name="introspeccion_preg_1_op2">Casi siempre</string>
    <string name="introspeccion_preg_1_op1">A veces</string>
    <string name="introspeccion_preg_1_op0">Casi nunca</string>
    <string name="introspeccion_preg_2">Me siento tenso o abrumado</string>
    <string name="acerca_titulo">SISTEMA HEPAQ</string>
    <string name="acerca_p1">Ante la necesidad de optimizar la oportunidad de la atención integral a los pacientes del hospital I Higos Urco Chachapoyas, nace la propuesta del Aplicativo y Web HEPAQ, sistemas informáticos basados en los pilares de la calidad de la atención siguiendo la sustentabilidad de las intervenciones con énfasis a la tecnología y el tiempo actual de pandemia.</string>
    <string name="acerca_p2">Esta iniciativa nace en la investigación realizada en pacientes del  programa Reforma de Vida  2019, </string>
    <string name="acerca_p2_1">(DOI: </string>
    <string name="acerca_p2_2">),</string>
    <string name="acerca_p3">es el mismo que da inicio  no solo a plasmar conclusiones y recomendaciones, sino el que motiva el desarrollo del presente Software que no solo brindara un sistema integral virtual, dinámico y de aprendizaje sino que plasma el cuidado del medio ambiente en  el uso de todo el material del programa en formatos digitales ligados a los distintos servicios que brindamos dentro de la red de Amazonas.</string>
    <string name="acerca_p4">Es así que guiado por la Dra. Sonia Tejada Muñoz, el equipo de mejora de la Red Amazonas, ponemos a su disposición el presente software que salvaguarda y da inicio a la virtualización del programa Reforma de Vida Amazonas.</string>
    <string name="acerca_url">https://doi.org/10.35383/cietna.v7i2.485</string>
    <string name="acerca_p5">Agradecido. \n\nDr. Manuel Jesús Quispe Narváez. \n\nCoordinador Regional Programa Reforma de Vida Amazonas.\n\nEssalud.</string>
</resources>